# FireSwag

./: README.md  fireswag.json  install.sh  main.py  options.json  pyproject.toml
src/: user.js
src/chrome/: userChrome.css
